Bug 1871527: Fix a crash in headless mode due to the creation of native menu bars for modals. r=mac-reviewers,bradwerth, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D197197